--- a/views/admin/adminLogin.ejs
+++ b/views/admin/adminLogin.ejs
@@ -63,7 +63,9 @@
                 <div class="mb-4">
                     <button type="submit" class="btn btn-primary w-100"> Login </button>
                 </div> <!-- form-group// -->
+                <a href="/forgetPswd" >Forget password?</a>
             </form>
+            <br>
            
             <p class="text-center mb-2">Don't have an account? <a href="/signup">Sign up now</a></p>
         </div>
