--- a/views/user/orderPlaced.ejs
+++ b/views/user/orderPlaced.ejs
@@ -16,14 +16,14 @@
         <div class="login-register-btn-remember col"  style="display: flex; justify-content:center; align-items: center; padding-top: 10px;">
                                        
             <div class="login-register-btn">
-                <button href="/">Shop more</button>
+                <a href="/"><button >Shop more</button></a>
             </div>
       
         </div>
         <div class="login-register-btn-remember col"  style="display: flex; justify-content:center; align-items: center; padding-top: 10px;">
                                        
-            <div class="login-register-btn" href="/productCart">
-                <button >Go to Cart</button>
+            <div class="login-register-btn">
+              <a href="/orders"> <button >Order List</button></a> 
             </div>
       
         </div>
