--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -15,8 +15,13 @@
         <nav>
             <ul class="menu-aside">
                 <li class="menu-item active"> 
-                    <a class="menu-link" href="/admin/adminHome"> <i class="icon material-icons md-home"></i>
+                    <a class="menu-link active" href="/admin/adminHome"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
+                    </a>
+                </li>
+                <li class="menu-item"> 
+                    <a class="menu-link" href="/admin/ordersList"> <i class="icon material-icons md-home"></i>
+                        <span class="text">Orders</span>
                     </a>
                 </li>
                 <li class="menu-item ">
