--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -21,6 +21,11 @@
                         <span class="text">Dashboard</span>
                     </a>
                 </li>
+                <li class="menu-item "> 
+                    <a class="menu-link" href="/admin/ordersList"> <i class="icon material-icons md-home"></i>
+                        <span class="text">Orders</span>
+                    </a>
+                </li>
                 <li class="menu-item active">
                     <a class="menu-link " href="/admin/products"> <i class="icon material-icons md-shopping_bag"></i>
                         <span class="text">Products</span>
@@ -112,16 +117,28 @@
                             </div>
                         </div>
                         <div class="col-md-3 col-12 me-auto mb-md-0 mb-3">
-                            <select class="form-select">
+
+
+                            <select name="category" class="form-select">
+                                <% if(locals.catData){ %>
+                                    <option selected>All category</option>
+                                    <% catData.forEach(element =>{ %>
+                                <option value="<%= element._id %>" ><%= element.name %> </option>
+                                <% }) %>
+                                <% } %>
+                            </select>
+
+
+                            <!-- <select class="form-select">
                                 <option selected>All category</option>
                                 <option>Electronics</option>
                                 <option>Clothes</option>
                                 <option>Automobile</option>
-                            </select>
+                            </select> -->
                         </div>
-                        <div class="col-md-2 col-6">
+                        <!-- <div class="col-md-2 col-6">
                             <input type="date" value="02.05.2022" class="form-control">
-                        </div>
+                        </div> -->
                         <div class="col-md-2 col-6">
                             <select class="form-select">
                                 <option selected>Status</option>
@@ -151,17 +168,19 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="col-lg-2 col-sm-2 col-4 col-price"> <span>$<%= product[i].regularPrice %></span> </div>
-                            <div class="col-lg-2 col-sm-2 col-4 col-status">
+                            <div class="col-lg-2 col-sm-2 col-4 col-price"> <span>₹<%= product[i].regularPrice %></span> </div>
+                            <div class="col-lg-1 col-sm-1 col-4 col-status">
                                 <span class="badge rounded-pill alert-success">Active</span>
                             </div>
-                            <div class="col-lg-1 col-sm-2 col-4 col-date">
+                            <!-- <div class="col-lg-1 col-sm-2 col-4 col-date">
                                 <span>02.11.2022</span>
-                            </div>
+                            </div> -->
                             <div class="col-lg-2 col-sm-2 col-4 col-action text-end">
                                 <a href="/admin/editProduct/<%= product[i]._id %>">
                                     <button class="btn btn-sm font-sm btn-brand rounded">Edit</button>
                                 </a>
+                            </div>
+                            <div class="col-lg-2 col-sm-2 col-4 col-action text-end">
                                 <% if (product[i].isBlocked === true) { %>
                                     <a href="/admin/productBlock?productName=<%= product[i].productName %>">
                                         <button class="toggleBtn btn btn-sm font-sm  rounded">Unblock</button>
@@ -171,6 +190,12 @@
                                         <button class="toggleBtn btn btn-sm font-sm btn-brand rounded">Block</button>
                                     </a>
                                 <% } %>   
+                            <!-- </div>
+                            <div class="col-lg-2 col-sm-2 col-4 col-action text-end"> -->
+                                <td>
+                                    <button class="toggleBtn btn btn-sm font-sm btn-brand rounded" onclick="confirmDelete('<%= product[i]._id %>')">Delete</button>
+                                </td>
+                                        
                             </div>
                         </div> <!-- row .// -->
                     </article> <!-- itemlist  .// -->
@@ -204,6 +229,14 @@
     <script src="assets/adminAssets/js/main.js" type="text/javascript"></script>
 </body>
 
+<script>
+    function confirmDelete(proId){
+        if (confirm(`Are you sure you want to delete the product "${proId}"?`)) {
+   
+            window.location.href = `/admin/deleteProduct?productId=${proId}`;
+        }
+    }
+</script>
 
 
 
