--- a/views/user/allProducts.ejs
+++ b/views/user/allProducts.ejs
@@ -63,9 +63,9 @@
                             <h5>Price</h5>
                             <div class="price-filter">
                                 <ul>
-                                    <li><a href="#">$0.00 - $20.00</a></li>
-                                    <li><a href="#">$20.00 - $40.00</a></li>
-                                    <li><a href="#">$30.00 - $50.00</a></li>
+                                    <li><a href="#">₹0.00 - ₹20.00</a></li>
+                                    <li><a href="#">₹20.00 - ₹40.00</a></li>
+                                    <li><a href="#">₹30.00 - ₹50.00</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -129,23 +129,27 @@
                                 <div class="product-wrap mb-50">
                                     <div class="product-img default-overlay mb-25" >
                                         <a href="/product-details?id=<%=proData[i]._id%>">
-                                            <img class="default-img" src="/assets/adminAssets/imgUploads/<%= proData[i].productImage[0] %>" alt="Product">
+                                            <% if(proData[i].productImage[0]!== undefined && proData[i].productImage[0] !== ''){  %>
+                                            <img class="default-img" src="/assets/adminAssets/imgUploads/<%= proData[i].productImage[0] %>" alt="img">
+                                            <% } else { %>
+                                            <img class="default-img" src="/assets/userAssets/images/logo/szucci-favicon-black.png" alt="img">
+                                            <% } %>
                                         </a>
                                         
                                         <input type="hidden" id="proId" name="user_id" value="<%= proData[i]._id %>">
-                                        <div class="product-action product-action-position-1">
-                                            <a href="/product-details?id=<%=proData[i]._id%>"><i class="fa fa-eye"></i><span>Quick Shop</span></a>
-                                            <a title="Add to Wishlist" href="/"><i class="fa fa-heart"></i><span>Add to Wishlist</span></a>
+                                        <!-- <div class="product-action product-action-position-1"> -->
+                                            <!-- <a href="/product-details?id=<%=proData[i]._id%>"><i class="fa fa-eye"></i><span>Quick Shop</span></a> -->
+                                            <!-- <a title="Add to Wishlist" href="/"><i class="fa fa-heart"></i><span>Add to Wishlist</span></a> -->
                                            
-                                            <a title="Add to Cart"  onclick="addToCart()"><i class="fa fa-shopping-cart"></i><span>Add to Cart</span></a>
-                                        </div>
+                                            <!-- <a title="Add to Cart" id="addToCartButton"  onclick="addToCart()"><i class="fa fa-shopping-cart"></i><span>Add to Cart</span></a> -->
+                                        <!-- </div> -->
                                     </div>
                                     <div class="product-content-4 title-font-width-400 text-center">
                                         <h4><a href="product-details"><%= proData[i].productName %></a></h4>
                                         <div class="product-price-3">
                                             <% if(proData[i].salePrice) {%>
                                             <span style="color: green;" class="new-price">₹ <%= proData[i].salePrice%></span>
-                                            <span class="old-price" style="font-size: 14px; font-weight: 400; color: #90908e; margin: 0 0 0 7px; text-decoration: line-through;">$ <%= proData[i].regularPrice%></span>
+                                            <span class="old-price" style="font-size: 14px; font-weight: 400; color: #90908e; margin: 0 0 0 7px; text-decoration: line-through;">₹ <%= proData[i].regularPrice%></span>
                                             <% if (proData[i].regularPrice && proData[i].salePrice) { %>
                                                 <% var offerPercentage = ((proData[i].regularPrice - proData[i].salePrice) / proData[i].regularPrice) * 100; %>
                                                 <div class="rating-result" title="<%= offerPercentage.toFixed(2) %>%">
@@ -187,7 +191,7 @@
                                     <div class="product-price-3">
                                         <% if(proData[i].salePrice) {%>
                                         <span style="color: green;" class="new-price">₹ <%= proData[i].salePrice%></span>
-                                        <span class="old-price" style="font-size: 14px; font-weight: 400; color: #90908e; margin: 0 0 0 7px; text-decoration: line-through;">$ <%= proData[i].regularPrice%></span>
+                                        <span class="old-price" style="font-size: 14px; font-weight: 400; color: #90908e; margin: 0 0 0 7px; text-decoration: line-through;">₹ <%= proData[i].regularPrice%></span>
                                         <% if (proData[i].regularPrice && proData[i].salePrice) { %>
                                             <% var offerPercentage = ((proData[i].regularPrice - proData[i].salePrice) / proData[i].regularPrice) * 100; %>
                                             <div class="rating-result" title="<%= offerPercentage.toFixed(2) %>%">
@@ -220,64 +224,64 @@
     </div>
 
 
-    
+<!--     
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
+             
+             function addToCart(){
+                
+                console.log("addToCart Ajax is working")
+                const prodQuantity = 1
+                const productId = document.getElementById("proId").value
+                //AJAX request
+                $.ajax({
+                        url: "/addToCart",
+                        method: "post",
+                        data: {
+                            prodQuantity,
+                            productId,
+                            
+                        },
+                        success: (response) => {
+                if (response.status === "success") {
+                    Swal.fire({
+                        icon: "success",
+                        title: "Product added to cart",
+                        showConfirmButton: false,
+                        timer: 2000,
+                    }).then((result) => {
+                        document.getElementById("addToCartButton").innerText = "View Cart ";
+                        window.location.href = "/productCart";
+                    });
+                } else if (response.status === "alreadyInCart") {
+                    Swal.fire({
+                        icon: "info",
+                        title: "Product already in cart",
+                        showConfirmButton: false,
+                        timer: 2000,
+                    });
+                } else if (response.status === "login") {
+                    Swal.fire({
+                        text: "You want to login the page?!",
+                        icon: "warning",
+                        showCancelButton: true,
+                        confirmButtonColor: "#3085d6",
+                        cancelButtonColor: "#d33",
+                        confirmButtonText: "Go to login!"
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            window.location.href = "/login";
+                        }
+                    });
+                }
+                }
 
-function addToCart(){
-
-console.log("addToCart Ajax is working")
-const prodQuantity = 1;
-const productId = document.getElementById("proId").value
-//AJAX request
-$.ajax({
-        url: "/addToCart",
-        method: "post",
-        data: {
-            prodQuantity,
-            productId,
-            
-        },
-        success: (response) => {
-if (response.status === "success") {
-    Swal.fire({
-        icon: "success",
-        title: "Product added to cart",
-        showConfirmButton: false,
-        timer: 2000,
-    }).then((result) => {
-        document.getElementById("addToCartButton").innerText = "View Cart ";
-        window.location.href = "/productCart";
-    });
-} else if (response.status === "alreadyInCart") {
-    Swal.fire({
-        icon: "info",
-        title: "Product already in cart",
-        showConfirmButton: false,
-        timer: 2000,
-    });
-} else if (response.status === "login") {
-    Swal.fire({
-        text: "You want to login the page?!",
-        icon: "warning",
-        showCancelButton: true,
-        confirmButtonColor: "#3085d6",
-        cancelButtonColor: "#d33",
-        confirmButtonText: "Go to login!"
-    }).then((result) => {
-        if (result.isConfirmed) {
-            window.location.href = "/login";
-        }
-    });
-}
-}
-
-    })
-}
+                })
+                }
 
 
 
-</script>
+</script> -->
 <%- include("../partials/footer.ejs") %>
