--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,5 +1,5 @@
-<%- include("../partials/header.ejs") %>
-   
+ <%- include("../partials/header.ejs") %>
+    
       
         <div class="breadcrumb-area section-padding-1 bg-gray breadcrumb-ptb-1">
             <div class="container-fluid">
@@ -47,7 +47,7 @@
                                             </div>
                                       
                                     </div>
-                                    <a href="forgetPass">Lost your password?</a>
+                                    <a href="forgetPswd">Lost your password?</a>
                                 </form>
                             </div>
                             <a>Don't have an account? </a> <a href="signup">SignUp here</a>
